--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-qunit-istanbul": "^0.6.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-qunit": "^1.2.1"
   }
 }
