--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "grunt-coveralls": "^1.0.1",
     "grunt-jscs": "^2.8.0",
     "grunt-qunit-istanbul": "^0.6.0",
-    "karma": "^1.7.1",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-qunit": "^1.2.1"
+    "karma-qunit": "^1.2.1",
+    "qunitjs": "^2.4.1"
   }
 }
