--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ bootstrap3 theme samples/Pivot-grid/visualization.html
 bootstrap3 theme samples/Editors/icons-and-styles.html
 bootstrap3 theme samples/Data-visualization/financial-series.html
 bootstrap3 theme samples/Data-visualization/chart-types.html
+/npm-shrinkwrap.json
