--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "test": "karma start",
-    "preinstall": "npm install -g bower",
-    "postinstall": "npm install -g grunt-cli && bower install"
+    "cover": "npm test -- --single-run",
+    "postinstall": "npm install -g grunt-cli"
   },
   "dependencies": {},
   "devDependencies": {
@@ -32,6 +32,8 @@
     "grunt-coveralls": "^1.0.1",
     "grunt-jscs": "^2.8.0",
     "grunt-qunit-istanbul": "^0.6.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
