--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-- '4'
+- 'node'
 script:
-- grunt verify
-- grunt coveralls
+- npm run cover
+#- grunt coveralls
 
 before_deploy:
 # clone bower repo
