--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cover": "grunt hint && grunt jscs && npm test -- --single-run",
     "postinstall": "npm install -g grunt-cli"
   },
-  "dependencies": {},
+  "dependencies": {
+    "coveralls": "^3.0.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
