--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
 - 'node'
+# https://github.com/travis-ci/travis-ci/issues/8836
+sudo: required
+addons:
+ chrome: stable
 script:
 - npm run cover
 - cat ./coverage/lcov.info | coveralls
