--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 node_js:
 - 'node'
 # https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-356879951
-sudo: false
-dist: trusty
-addons:
-  chrome: stable
+# sudo: false
+# dist: trusty
+# addons:
+#   chrome: stable
 
 script:
 - npm run cover
