--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ node_js:
 # https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-356879951
 # sudo: false
 # dist: trusty
-# addons:
-#   chrome: stable
+addons:
+  chrome: stable
 
 script:
 - npm run cover
