--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: node_js
 node_js:
 - 'node'
-# https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-356879951
-# sudo: false
+# https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-357626842
+sudo: required
 # dist: trusty
 addons:
   chrome: stable
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  
 script:
 - npm run cover
 after_success:
