--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-qunit": "^1.2.1",
-    "qunitjs": "^2.4.1"
+    "qunitjs": "^2.4.1",
+    "knockout": "^3.4.2"
   }
 }
