--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
+    "glob": "^7.1.2",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -36,12 +37,12 @@
     "grunt-coveralls": "^1.0.1",
     "grunt-jscs": "^2.8.0",
     "grunt-qunit-istanbul": "^0.6.0",
+    "jquery-mockjax": "^2.1.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-qunit": "^1.2.1",
-    "qunitjs": "^2.4.1",
-    "jquery-mockjax": "^2.1.0",
-    "knockout": "^3.4.2"
+    "knockout": "^3.4.2",
+    "qunitjs": "^2.4.1"
   }
 }
