chore(ci): enable trusty env, cause it is not default anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '10.12.0'
 # https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-357626842
 sudo: required
-# dist: trusty
+dist: trusty
 addons:
   chrome: stable
 
