--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-qunit": "^1.2.1",
+    "karma-spec-reporter": "0.0.32",
     "knockout": "^3.4.2",
     "qunitjs": "^2.4.1"
   }
