--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: node_js
 node_js:
 - '10.12.0'
-# https://github.com/travis-ci/travis-ci/issues/8836#issuecomment-357626842
 sudo: required
-dist: trusty
+dist: xenial
 addons:
-  chrome: stable
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+services:
+  - xvfb
 
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
   
 script:
 - npm run cover
