ci(travis): update chrome addon configuration
https://docs.travis-ci.com/user/chrome#selecting-a-chrome-version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ node_js:
 sudo: required
 dist: xenial
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 services:
   - xvfb
 
