Adding deployment yml

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, '[0-9]+.[0-9]' ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, '[0-9]+.[0-9]' ]
 
 jobs:
   build:
