chore(*): try to add Chrome

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,8 +18,10 @@ jobs:
       matrix:
         node-version: [10.x, 12.x, 14.x, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    
     steps:
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
