--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     
     steps:
@@ -31,7 +31,7 @@ jobs:
     - run: npm run cover
 
     - name: Publish to coveralls.io
-      if: github.repository == 'IgniteUI/ignite-ui' && matrix.node-version == '14.x'
+      if: github.repository == 'IgniteUI/ignite-ui' && matrix.node-version == '16.x'
       uses: coverallsapp/github-action@v1.1.2
       with:
           path-to-lcov: ./coverage/lcov.info
